0x07-python-test_driven_development/tests/0-add_integer.txt
Testing 0-add_integer.py


importing necessary module

add_integer = __import__('0-add_integer').add_integer


Testing the module

>>> add_integer(1, 2)
3
>>> add_integer(0, 8)
8
>>> add_integer(3, -4)
-1
>>> add_integer(-2, -6)
-8
>>> add_integer(3)
101
>>> add_integer(2.4, 5,6_
  File "<stdin>", line 1
    add_integer(2.4, 5,6_
                        ^
SyntaxError: invalid decimal literal
>>> add_integer(2.4, 8.9)
10
>>> add_integer(3, 5.6)
8
>>> add_integer(-2.3, -4.5)
-6
>>> add_integer('c', 'f')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/allan/Desktop/studies/fibo.py", line 23, in add_integer
    raise TypeError("a must be an integer")
TypeError: a must be an integer
>>> 
